rust/transpiler/tests/errors/unclosed_def.hyper
def greet(name: str):
    <h1>Hello, {name}!</h1>
